--- a/UNIDADES/UT9/1/index.html
+++ b/UNIDADES/UT9/1/index.html
@@ -37,36 +37,83 @@
     <body>
         <div id="productos" class="container mt-5">
             <div class="row">
-                <div class="col-lg-3 producto">
+                <div class="col-lg-3 producto mb-3">
                     <img src="articulos/ALTAVOCES.GIF" alt="Producto 1" height="100px" width="100px">
                     <p>Tele</p>
                     <p>Precio: $10.00</p>
                     <input type="number" id="cantidadProducto1" value="0" min="0">
                 </div>
-                <div class="col-lg-3 producto">
+                <div class="col-lg-3 producto mb-3">
                     <img src="articulos/BOLA1.GIF" alt="Producto 1" height="100px" width="100px">
                     <p>Tele</p>
-                    <p>Precio: $10.00</p>
+                    <p>Precio: $8.00</p>
                     <input type="number" id="cantidadProducto1" value="0" min="0">
                 </div>
-                <div class="col-lg-3 producto">
+                <div class="col-lg-3 producto mb-3">
                     <img src="articulos/CDROM.GIF" alt="Producto 1" height="100px" width="100px">
                     <p>Tele</p>
+                    <p>Precio: $4.00</p>
+                    <input type="number" id="cantidadProducto1" value="0" min="0">
+                </div>
+                <div class="col-lg-3 producto mb-3">
+                    <img src="articulos/DISQUETERA.GIF" alt="Producto 1" height="100px" width="100px">
+                    <p>Tele</p>
+                    <p>Precio: $3.00</p>
+                    <input type="number" id="cantidadProducto1" value="0" min="0">
+                </div>
+                <div class="col-lg-3 producto mb-3v">
+                    <img src="articulos/DVD.GIF" alt="Producto 1" height="100px" width="100px">
+                    <p>Tele</p>
+                    <p>Precio: $11.00</p>
+                    <input type="number" id="cantidadProducto1" value="0" min="0">
+                </div>
+                <div class="col-lg-3 producto mb-3">
+                    <img src="articulos/FUENTE.GIF" alt="Producto 1" height="100px" width="100px">
+                    <p>Tele</p>
                     <p>Precio: $10.00</p>
                     <input type="number" id="cantidadProducto1" value="0" min="0">
                 </div>
-                <div class="col-lg-3 producto">
-                    <img src="articulos/DISQUETERA.GIF" alt="Producto 1" height="100px" width="100px">
+                <div class="col-lg-3 producto mb-3">
+                    <img src="articulos/HD.GIF" alt="Producto 1" height="100px" width="100px">
                     <p>Tele</p>
-                    <p>Precio: $10.00</p>
+                    <p>Precio: $20.00</p>
+                    <input type="number" id="cantidadProducto1" value="0" min="0">
+                </div>
+                <div class="col-lg-3 producto mb-3">
+                    <img src="articulos/IMPRESORA.GIF" alt="Producto 1" height="100px" width="100px">
+                    <p>Tele</p>
+                    <p>Precio: $13.00</p>
+                    <input type="number" id="cantidadProducto1" value="0" min="0">
+                </div>
+                <div class="col-lg-3 producto mb-3">
+                    <img src="articulos/MEMORIA.GIF" alt="Producto 1" height="100px" width="100px">
+                    <p>Tele</p>
+                    <p>Precio: $2.00</p>
+                    <input type="number" id="cantidadProducto1" value="0" min="0">
+                </div>
+                <div class="col-lg-3 producto mb-3">
+                    <img src="articulos/MICRO.GIF" alt="Producto 1" height="100px" width="100px">
+                    <p>Tele</p>
+                    <p>Precio: $7.00</p>
+                    <input type="number" id="cantidadProducto1" value="0" min="0">
+                </div>
+                <div class="col-lg-3 producto mb-3">
+                    <img src="articulos/MICROAMD.GIF" alt="Producto 1" height="100px" width="100px">
+                    <p>Tele</p>
+                    <p>Precio: $25.00</p>
+                    <input type="number" id="cantidadProducto1" value="0" min="0">
+                </div>
+                <div class="col-lg-3 producto mb-3">
+                    <img src="articulos/MODEM.GIF" alt="Producto 1" height="100px" width="100px">
+                    <p>Tele</p>
+                    <p>Precio: $9.00</p>
                     <input type="number" id="cantidadProducto1" value="0" min="0">
                 </div>
             </div>
-            <!-- Agrega más filas según sea necesario -->
         </div>
         
 <div class="container mt-5 d-flex justify-content-center">
-    <button onclick="verPedido()">Ver Pedido</button>
+    <button onclick="verPedido()">Crear Pedido</button>
 </div>
 
 
